Added composer json file.

--- a/composer.json
+++ b/composer.json
@@ -3,5 +3,5 @@
   "type": "drupal-module",
   "description": "My Awesome Module",
   "license": "GPL-2.0+",
-  "minimum-stability": "dev",
+  "minimum-stability": "dev"
 }
